--- a/OrchestrationService/src/main/resources/application.properties
+++ b/OrchestrationService/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-
+bootstrap.server.port:8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/architecture
 spring.datasource.username=postgres
 spring.datasource.password=test
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+kafka.bootstrap-servers=localhost:9023
+kafka.group-id=architecture
 
